[gd_scene load_steps=9 format=3 uid="uid://b3e7kbed3joxo"]

[ext_resource type="Script" path="res://scenes/bottom_bar/bottom_bar.gd" id="1_ib5g4"]
[ext_resource type="Texture2D" uid="uid://dl6a2mn8felt5" path="res://icons/eye.svg" id="1_phqrd"]
[ext_resource type="Theme" uid="uid://blbl1uhbtj7qj" path="res://resources/theme/zude_tools_theme.tres" id="1_ss0pt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m7qq2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wo3u2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_15gi1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3iw2u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6stx6"]

[node name="BottomBar" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 56.0
grow_horizontal = 2
theme = ExtResource("1_ss0pt")
script = ExtResource("1_ib5g4")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Margin"]
layout_mode = 2

[node name="ToggleHeroButton" type="Button" parent="Margin/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_m7qq2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wo3u2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_15gi1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3iw2u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6stx6")
icon = ExtResource("1_phqrd")
flat = true
icon_alignment = 1

[node name="PreviewSizeSlider" type="HSlider" parent="Margin/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
min_value = 150.0
max_value = 1000.0
step = 25.0
value = 150.0
scrollable = false

[node name="ItemCountLineEdit" type="LineEdit" parent="Margin/HBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
placeholder_text = "0"
alignment = 2
max_length = 9
editable = false
expand_to_text_length = true
flat = true
